criando a estrutura da views e adicionando o font-awesome

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,11 @@
 @import '~bootstrap/scss/bootstrap-grid';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Font Awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~@fortawesome/fontawesome-free/scss/fa-solid.scss";
+@import "~@fortawesome/fontawesome-free/scss/fa-brands.scss";
+@import "~@fortawesome/fontawesome-free/scss/fa-brands.scss";
 
 // Global
 	// Variables
