--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -1,3 +1,24 @@
+// Font Awesome
+@fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+
+.user {
+  @include fa-icon;
+  @extend .fas;
+
+  &:before {
+    content: fa-content($fa-var-user);
+  }
+}
+
+.twitter {
+  @include fa-icon;
+  @extend .fab;
+
+  &:before {
+    content: fa-content($fa-var-twitter);
+  }
+}
+
 // Variables
 
 // Body
