--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,19 +1,23 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
+/*
 // Bootstrap Reboot
 @import '~bootstrap/scss/bootstrap-reboot';
 // Bootstrap Grid
 @import '~bootstrap/scss/bootstrap-grid';
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
 // Font Awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "~@fortawesome/fontawesome-free/scss/fa-solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/fa-brands.scss";
 @import "~@fortawesome/fontawesome-free/scss/fa-brands.scss";
-
+// MDBootstrap
+@import "~mdbootstrap/scss/mdb.scss";
+*/
 // Global
 	// Variables
 	@import 'global/variables';
