--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -1,4 +1,5 @@
 // Font Awesome
+/*
 @fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 .user {
@@ -17,7 +18,7 @@
   &:before {
     content: fa-content($fa-var-twitter);
   }
-}
+}*/
 
 // Variables
 
