--- a/resources/assets/sass/layout/_fonts.scss
+++ b/resources/assets/sass/layout/_fonts.scss
@@ -1,1 +1,9 @@
-// Fonts -> Tipografia e uso das fontes.
+// Typography
+@import url("https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i");
+$font-family-sans-serif: "Muli", sans-serif;
+
+$navbar-dark-color: rgba(white, .85);
+$navbar-dark-hover-color: white;
+
+$font-size-base: 1.2rem;
+/*$line-height-base: 1.6;*/
