criando o header responsivo com a nova imagem de fundo

--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -1,8 +1,9 @@
 // Variables
 // Body
-body {
+/*body {
   padding-top: 60px;
-}
+}*/
 
 // Colors
-$primary: rgba(#990033, .9);
+$primary: rgba(#83232F, .8);
+//$bg-primary: rgba($primary, .8);
