--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -1,9 +1,5 @@
 // Variables
-// Body
-/*body {
-  padding-top: 60px;
-}*/
 
 // Colors
-$primary: rgba(#83232F, .8);
-//$bg-primary: rgba($primary, .8);
+$primary: #83232F;
+$dark: rgba($primary, .8);
