--- a/resources/assets/sass/layout/_fonts.scss
+++ b/resources/assets/sass/layout/_fonts.scss
@@ -1,9 +1,16 @@
 // Typography
 @import url("https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i");
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab:600');
 $font-family-sans-serif: "Muli", sans-serif;
+$font-horario: "Josefin Slab", serif;
 
 $navbar-dark-color: rgba(white, .85);
 $navbar-dark-hover-color: white;
 
 $font-size-base: 1.2rem;
+@media (max-width: 767.98px)  {
+	$font-size-base: 1rem;
+}
+
+
 /*$line-height-base: 1.6;*/
