--- a/resources/assets/sass/layout/_layout.scss
+++ b/resources/assets/sass/layout/_layout.scss
@@ -44,7 +44,7 @@ header {
 
     div {
       width: 80%;
-      background-color: $primary;
+      background-color: rgba($primary, .8);
       padding: 3rem 0;
       margin: 5rem auto;
       img {
@@ -81,13 +81,25 @@ header {
       }
     }
   }
+}
 
-  /*@media (min-width: 1440px) {
-  	height: 1000px;
+.programacao {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+
+  h1, h2, h3 {
+    color: $primary;
   }
 
-  @include media-breakpoint-down(md) {
-	  background-image: url("/images/bg-mobile.jpeg");
-	  height: 400px;
-	}*/
+  .palestra {
+    padding-left: 2rem;
+    border-left: 2px solid $primary;
+    margin-bottom: 3rem;
+    h2 {
+      font-family: $font-horario;
+    }
+    p {
+      color: $primary;
+    }
+  }
 }
