--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -2,7 +2,7 @@
 
 // Header
 header {
-	background-image: url("/images/bg-desktop.jpg");
+	background-image: url("https://res.cloudinary.com/tesseract/image/upload/f_auto,q_auto/v1531876306/abenepi2/bg-desktop.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -104,16 +104,23 @@ header {
     color: $primary;
   }
 
-  img {
-  	width: 100%;
-  	margin: 0 auto 3rem;
-  	@include media-breakpoint-down(md) { margin-bottom: 2rem }
-  	display: block;
-  }
+  .logo {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    @include media-breakpoint-down(md) { display: block }
 
-  .tesseract {
-  	width: auto;
-  	height: 150px;
+    img {
+      width: 100%;
+      margin: auto;
+      @include media-breakpoint-down(md) { margin: 0 auto 2rem }
+      display: block;
+    }
+
+    .tesseract {
+      width: initial;
+      height: 150px;
+    }
   }
 }
 
@@ -157,7 +164,7 @@ header {
       top: 0;
       width: 18px;
       height: 18px;
-      border: 1px solid #ddd;
+      border: 1px solid #333333;
       border-radius: 100%;
       background: #fff;
   }
@@ -168,8 +175,8 @@ header {
       height: 12px;
       background: $primary;
       position: absolute;
-      top: 4px;
-      left: 4px;
+      top: 3px;
+      left: 3px;
       border-radius: 100%;
       transition: all 0.2s ease;
   }
