--- a/resources/assets/sass/layout/_fonts.scss
+++ b/resources/assets/sass/layout/_fonts.scss
@@ -10,4 +10,8 @@ $navbar-dark-hover-color: white;
 $font-size-base: 1.2rem;
 @media (max-width: 767.98px)  {
 	$font-size-base: 1rem;
+
+	h1 {
+		font-size: 2.5rem !important;
+	}
 }
