--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -151,7 +151,8 @@ header {
   [type="radio"]:not(:checked) + label
   {
       position: relative;
-      padding-left: 28px;
+      padding-left: 32px;
+      @include media-breakpoint-up(lg) { padding-top: 4px }      
       cursor: pointer;
       line-height: 20px;
       display: inline-block;
@@ -161,22 +162,22 @@ header {
       content: '';
       position: absolute;
       left: 0;
-      top: 0;
-      width: 18px;
-      height: 18px;
-      border: 1px solid #333333;
+      top: 2px;
+      width: 26px;
+      height: 26px;
+      border: 2px solid #666;
       border-radius: 100%;
       background: #fff;
   }
   [type="radio"]:checked + label:after,
   [type="radio"]:not(:checked) + label:after {
       content: '';
-      width: 12px;
-      height: 12px;
-      background: $primary;
+      width: 16px;
+      height: 16px;
+      background: #83232F;
       position: absolute;
-      top: 3px;
-      left: 3px;
+      top: 7px;
+      left: 5px;
       border-radius: 100%;
       transition: all 0.2s ease;
   }
